# imxrt-usbh

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_example.ps1
.github/workflows/: ci.yml
docs/: DEVELOPER_GUIDE.md
docs/design/: CACHE_COHERENCY.md  USB_CONTROL_TRANSFERS.md
docs/planning/: Overview.md  imxrt-ral-changes.md  imxrt-usbd-reuse-analysis.md  phase1_debugging.md  phase1_foundation.md  phase2_5_cleanup.md  phase2_host_controller_trait.md  phase2a_debugging.md  phase2b_debugging.md  phase2c_debugging.md  phase3_interrupts_and_async.md  phase4_testing.md  phase5_documentation.md  usb_logging_debugging.md
docs/planning/agent_reports/: cotton_concurrent_polling_research.md  cotton_device_events_analysis.md  cotton_enumeration_flow.md  cotton_host_controller_reference.md  hub_disconnect_race_condition_analysis.md  hub_support_research.md  usbhost_t36_highspeed.md
examples/: README.md  hal_logging.rs  hal_usb_host_init.rs  rtic_heartbeat.rs  rtic_usb_enumerate.rs  rtic_usb_hid_keyboard.rs  rtic_usb_hub.rs  rtic_usb_mass_storage.rs
src/: cache.rs  ehci.rs  gpt.rs  host.rs  lib.rs  log.rs  ral.rs  vcell.rs
src/host/: controller.rs  device_detect.rs  futures.rs  interrupt_pipe.rs  mod.rs  schedule.rs  shared.rs  statics.rs  trait_impl.rs  transfer.rs
