[package]
name = "imxrt-usbh"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7"
ral-registers = "0.1"
bitflags = "2"

[dependencies.defmt-03]
package = "defmt"
version = "0.3"
optional = true

[features]
defmt-03 = ["dep:defmt-03"]

[dev-dependencies]
imxrt-hal = { path = "../imxrt-hal", features = [ "imxrt1060" ] }
imxrt-iomuxc = { version = "0.3.0", features = ["imxrt1060"] }
imxrt-ral = { version = "0.6.1", features = ["imxrt1062"] }
teensy4-fcb = "0.4.0"
teensy4-panic = "0.2.3"
imxrt-log = { path = "../imxrt-hal/logging", default-features = false, features = [
    "log",
    "lpuart",
    "usbd",
] }
board = { path = "../imxrt-hal/board", features = [ "teensy4" ]}
imxrt-rt = "0.1.7"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
log = "0.4"

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
