[package]
name = "imxrt-usbh"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2"
cotton-usb-host = { version = "0.2.1", default-features = false }
futures-core = { version = "0.3", default-features = false }
imxrt-ral = "0.6"
rtic-common = "1"
critical-section = "1.1"
log = { version = "0.4", optional = true }

[target.'cfg(target_os = "none")'.dependencies]
cortex-m = "0.7"

[dependencies.defmt-03]
package = "defmt"
version = "0.3"
optional = true

[features]
default = ["log"]
defmt-03 = ["dep:defmt-03"]
log = ["dep:log"]
hub-support = []

[package.metadata.docs.rs]
default-target = "thumbv7em-none-eabihf"
